ffigen/LabSoundHelper.h

void AnalyserNode_setFftSize(int nodeId, AudioContext* context, int fftSize);
int AnalyserNode_fftSize(int nodeId);
// a value large enough to hold all the data return from get*FrequencyData
int AnalyserNode_frequencyBinCount(int nodeId);
void AnalyserNode_setMinDecibels(int nodeId, double k);
int AnalyserNode_minDecibels(int nodeId);
void AnalyserNode_setMaxDecibels(int nodeId, double k);
int AnalyserNode_maxDecibels(int nodeId);
void AnalyserNode_setSmoothingTimeConstant(int nodeId, double k);
int AnalyserNode_smoothingTimeConstant(int nodeId);
// frequency bins, reported in db
void AnalyserNode_getFloatFrequencyData(int nodeId, float* array);
// frequency bins, reported as a linear mapping of minDecibels to maxDecibles onto 0-255.
// if resample is true, then the computed values will be linearly resampled
void AnalyserNode_getByteFrequencyData(int nodeId, uint8_t* array, int resample);
void AnalyserNode_getFloatTimeDomainData(int nodeId, float* array);
void AnalyserNode_getByteTimeDomainData(int nodeId, uint8_t* array);
//////////////////////
/// OscillatorNode ///
//////////////////////

int createOscillatorNode(AudioContext* context);
int OscillatorNode_type(int nodeId);
void OscillatorNode_setType(int nodeId, int type);
// default 1.0
int OscillatorNode_amplitude(int nodeId);
// hz
int OscillatorNode_frequency(int nodeId);
// default 0.0
int OscillatorNode_bias(int nodeId);
// Detune value in Cents.
int OscillatorNode_detune(int nodeId);
/// BiquadFilterNode
int createBiquadFilterNode(AudioContext* context);
int BiquadFilterNode_type(int nodeId);
void BiquadFilterNode_setType(int nodeId, int type);
int BiquadFilterNode_frequency(int nodeId);
int BiquadFilterNode_q(int nodeId);
int BiquadFilterNode_gain(int nodeId);