lib/src/generated_bindings.dart


  void AnalyserNode_setFftSize(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
    int fftSize,
  ) {
    return _AnalyserNode_setFftSize(
      nodeId,
      context,
      fftSize,
    );
  }

  late final _AnalyserNode_setFftSize_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setFftSize>>(
          'AnalyserNode_setFftSize');
  late final _dart_AnalyserNode_setFftSize _AnalyserNode_setFftSize =
      _AnalyserNode_setFftSize_ptr.asFunction<_dart_AnalyserNode_setFftSize>();

  int AnalyserNode_fftSize(
    int nodeId,
  ) {
    return _AnalyserNode_fftSize(
      nodeId,
    );
  }

  late final _AnalyserNode_fftSize_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_fftSize>>(
          'AnalyserNode_fftSize');
  late final _dart_AnalyserNode_fftSize _AnalyserNode_fftSize =
      _AnalyserNode_fftSize_ptr.asFunction<_dart_AnalyserNode_fftSize>();

  int AnalyserNode_frequencyBinCount(
    int nodeId,
  ) {
    return _AnalyserNode_frequencyBinCount(
      nodeId,
    );
  }

  late final _AnalyserNode_frequencyBinCount_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_frequencyBinCount>>(
          'AnalyserNode_frequencyBinCount');
  late final _dart_AnalyserNode_frequencyBinCount
      _AnalyserNode_frequencyBinCount = _AnalyserNode_frequencyBinCount_ptr
          .asFunction<_dart_AnalyserNode_frequencyBinCount>();

  void AnalyserNode_setMinDecibels(
    int nodeId,
    double k,
  ) {
    return _AnalyserNode_setMinDecibels(
      nodeId,
      k,
    );
  }

  late final _AnalyserNode_setMinDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setMinDecibels>>(
          'AnalyserNode_setMinDecibels');
  late final _dart_AnalyserNode_setMinDecibels _AnalyserNode_setMinDecibels =
      _AnalyserNode_setMinDecibels_ptr.asFunction<
          _dart_AnalyserNode_setMinDecibels>();

  int AnalyserNode_minDecibels(
    int nodeId,
  ) {
    return _AnalyserNode_minDecibels(
      nodeId,
    );
  }

  late final _AnalyserNode_minDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_minDecibels>>(
          'AnalyserNode_minDecibels');
  late final _dart_AnalyserNode_minDecibels _AnalyserNode_minDecibels =
      _AnalyserNode_minDecibels_ptr.asFunction<
          _dart_AnalyserNode_minDecibels>();

  void AnalyserNode_setMaxDecibels(
    int nodeId,
    double k,
  ) {
    return _AnalyserNode_setMaxDecibels(
      nodeId,
      k,
    );
  }

  late final _AnalyserNode_setMaxDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setMaxDecibels>>(
          'AnalyserNode_setMaxDecibels');
  late final _dart_AnalyserNode_setMaxDecibels _AnalyserNode_setMaxDecibels =
      _AnalyserNode_setMaxDecibels_ptr.asFunction<
          _dart_AnalyserNode_setMaxDecibels>();

  int AnalyserNode_maxDecibels(
    int nodeId,
  ) {
    return _AnalyserNode_maxDecibels(
      nodeId,
    );
  }

  late final _AnalyserNode_maxDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_maxDecibels>>(
          'AnalyserNode_maxDecibels');
  late final _dart_AnalyserNode_maxDecibels _AnalyserNode_maxDecibels =
      _AnalyserNode_maxDecibels_ptr.asFunction<
          _dart_AnalyserNode_maxDecibels>();

  void AnalyserNode_setSmoothingTimeConstant(
    int nodeId,
    double k,
  ) {
    return _AnalyserNode_setSmoothingTimeConstant(
      nodeId,
      k,
    );
  }

  late final _AnalyserNode_setSmoothingTimeConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setSmoothingTimeConstant>>(
          'AnalyserNode_setSmoothingTimeConstant');
  late final _dart_AnalyserNode_setSmoothingTimeConstant
      _AnalyserNode_setSmoothingTimeConstant =
      _AnalyserNode_setSmoothingTimeConstant_ptr.asFunction<
          _dart_AnalyserNode_setSmoothingTimeConstant>();

  int AnalyserNode_smoothingTimeConstant(
    int nodeId,
  ) {
    return _AnalyserNode_smoothingTimeConstant(
      nodeId,
    );
  }

  late final _AnalyserNode_smoothingTimeConstant_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_smoothingTimeConstant>>(
          'AnalyserNode_smoothingTimeConstant');
  late final _dart_AnalyserNode_smoothingTimeConstant
      _AnalyserNode_smoothingTimeConstant =
      _AnalyserNode_smoothingTimeConstant_ptr.asFunction<
          _dart_AnalyserNode_smoothingTimeConstant>();

  void AnalyserNode_getFloatFrequencyData(
    int nodeId,
    ffi.Pointer<ffi.Float> array,
  ) {
    return _AnalyserNode_getFloatFrequencyData(
      nodeId,
      array,
    );
  }

  late final _AnalyserNode_getFloatFrequencyData_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_getFloatFrequencyData>>(
          'AnalyserNode_getFloatFrequencyData');
  late final _dart_AnalyserNode_getFloatFrequencyData
      _AnalyserNode_getFloatFrequencyData =
      _AnalyserNode_getFloatFrequencyData_ptr.asFunction<
          _dart_AnalyserNode_getFloatFrequencyData>();

  void AnalyserNode_getByteFrequencyData(
    int nodeId,
    ffi.Pointer<ffi.Uint8> array,
    int resample,
  ) {
    return _AnalyserNode_getByteFrequencyData(
      nodeId,
      array,
      resample,
    );
  }

  late final _AnalyserNode_getByteFrequencyData_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_getByteFrequencyData>>(
          'AnalyserNode_getByteFrequencyData');
  late final _dart_AnalyserNode_getByteFrequencyData
      _AnalyserNode_getByteFrequencyData =
      _AnalyserNode_getByteFrequencyData_ptr.asFunction<
          _dart_AnalyserNode_getByteFrequencyData>();

  void AnalyserNode_getFloatTimeDomainData(
    int nodeId,
    ffi.Pointer<ffi.Float> array,
  ) {
    return _AnalyserNode_getFloatTimeDomainData(
      nodeId,
      array,
    );
  }

  late final _AnalyserNode_getFloatTimeDomainData_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_getFloatTimeDomainData>>(
          'AnalyserNode_getFloatTimeDomainData');
  late final _dart_AnalyserNode_getFloatTimeDomainData
      _AnalyserNode_getFloatTimeDomainData =
      _AnalyserNode_getFloatTimeDomainData_ptr.asFunction<
          _dart_AnalyserNode_getFloatTimeDomainData>();

  void AnalyserNode_getByteTimeDomainData(
    int nodeId,
    ffi.Pointer<ffi.Uint8> array,
  ) {
    return _AnalyserNode_getByteTimeDomainData(
      nodeId,
      array,
    );
  }

  late final _AnalyserNode_getByteTimeDomainData_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_getByteTimeDomainData>>(
          'AnalyserNode_getByteTimeDomainData');
  late final _dart_AnalyserNode_getByteTimeDomainData
      _AnalyserNode_getByteTimeDomainData =
      _AnalyserNode_getByteTimeDomainData_ptr.asFunction<
          _dart_AnalyserNode_getByteTimeDomainData>();

  /// ///////////////////
  /// OscillatorNode ///
  /// ///////////////////
  int createOscillatorNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createOscillatorNode(
      context,
    );
  }

  late final _createOscillatorNode_ptr =
      _lookup<ffi.NativeFunction<_c_createOscillatorNode>>(
          'createOscillatorNode');
  late final _dart_createOscillatorNode _createOscillatorNode =
      _createOscillatorNode_ptr.asFunction<_dart_createOscillatorNode>();

  int OscillatorNode_type(
    int nodeId,
  ) {
    return _OscillatorNode_type(
      nodeId,
    );
  }

  late final _OscillatorNode_type_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_type>>(
          'OscillatorNode_type');
  late final _dart_OscillatorNode_type _OscillatorNode_type =
      _OscillatorNode_type_ptr.asFunction<_dart_OscillatorNode_type>();

  void OscillatorNode_setType(
    int nodeId,
    int type,
  ) {
    return _OscillatorNode_setType(
      nodeId,
      type,
    );
  }

  late final _OscillatorNode_setType_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_setType>>(
          'OscillatorNode_setType');
  late final _dart_OscillatorNode_setType _OscillatorNode_setType =
      _OscillatorNode_setType_ptr.asFunction<_dart_OscillatorNode_setType>();

  int OscillatorNode_amplitude(
    int nodeId,
  ) {
    return _OscillatorNode_amplitude(
      nodeId,
    );
  }

  late final _OscillatorNode_amplitude_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_amplitude>>(
          'OscillatorNode_amplitude');
  late final _dart_OscillatorNode_amplitude _OscillatorNode_amplitude =
      _OscillatorNode_amplitude_ptr.asFunction<
          _dart_OscillatorNode_amplitude>();

  int OscillatorNode_frequency(
    int nodeId,
  ) {
    return _OscillatorNode_frequency(
      nodeId,
    );
  }

  late final _OscillatorNode_frequency_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_frequency>>(
          'OscillatorNode_frequency');
  late final _dart_OscillatorNode_frequency _OscillatorNode_frequency =
      _OscillatorNode_frequency_ptr.asFunction<
          _dart_OscillatorNode_frequency>();

  int OscillatorNode_bias(
    int nodeId,
  ) {
    return _OscillatorNode_bias(
      nodeId,
    );
  }

  late final _OscillatorNode_bias_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_bias>>(
          'OscillatorNode_bias');
  late final _dart_OscillatorNode_bias _OscillatorNode_bias =
      _OscillatorNode_bias_ptr.asFunction<_dart_OscillatorNode_bias>();

  int OscillatorNode_detune(
    int nodeId,
  ) {
    return _OscillatorNode_detune(
      nodeId,
    );
  }

  late final _OscillatorNode_detune_ptr =
      _lookup<ffi.NativeFunction<_c_OscillatorNode_detune>>(
          'OscillatorNode_detune');
  late final _dart_OscillatorNode_detune _OscillatorNode_detune =
      _OscillatorNode_detune_ptr.asFunction<_dart_OscillatorNode_detune>();

  /// BiquadFilterNode
  int createBiquadFilterNode(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _createBiquadFilterNode(
      context,
    );
  }

  late final _createBiquadFilterNode_ptr =
      _lookup<ffi.NativeFunction<_c_createBiquadFilterNode>>(
          'createBiquadFilterNode');
  late final _dart_createBiquadFilterNode _createBiquadFilterNode =
      _createBiquadFilterNode_ptr.asFunction<_dart_createBiquadFilterNode>();

  int BiquadFilterNode_type(
    int nodeId,
  ) {
    return _BiquadFilterNode_type(
      nodeId,
    );
  }

  late final _BiquadFilterNode_type_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_type>>(
          'BiquadFilterNode_type');
  late final _dart_BiquadFilterNode_type _BiquadFilterNode_type =
      _BiquadFilterNode_type_ptr.asFunction<_dart_BiquadFilterNode_type>();

  void BiquadFilterNode_setType(
    int nodeId,
    int type,
  ) {
    return _BiquadFilterNode_setType(
      nodeId,
      type,
    );
  }

  late final _BiquadFilterNode_setType_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_setType>>(
          'BiquadFilterNode_setType');
  late final _dart_BiquadFilterNode_setType _BiquadFilterNode_setType =
      _BiquadFilterNode_setType_ptr.asFunction<
          _dart_BiquadFilterNode_setType>();

  int BiquadFilterNode_frequency(
    int nodeId,
  ) {
    return _BiquadFilterNode_frequency(
      nodeId,
    );
  }

  late final _BiquadFilterNode_frequency_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_frequency>>(
          'BiquadFilterNode_frequency');
  late final _dart_BiquadFilterNode_frequency _BiquadFilterNode_frequency =
      _BiquadFilterNode_frequency_ptr.asFunction<
          _dart_BiquadFilterNode_frequency>();

  int BiquadFilterNode_q(
    int nodeId,
  ) {
    return _BiquadFilterNode_q(
      nodeId,
    );
  }

  late final _BiquadFilterNode_q_ptr =
      _lookup<ffi.NativeFunction<_c_BiquadFilterNode_q>>('BiquadFilterNode_q');
  late final _dart_BiquadFilterNode_q _BiquadFilterNode_q =
      _BiquadFilterNode_q_ptr.asFunction<_dart_BiquadFilterNode_q>();

  int BiquadFilterNode_gain(
    int nodeId,
  ) {
    return _BiquadFilterNode_gain(
      nodeId,
    );
  }
